Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "favorite_destination()\n",
+    "travel_destinations[-1] # 'madagascar'"
+   ]
   },
   {
    "cell_type": "code",
