Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "favorite_destination()\n",
+    "ffavorite_destination()\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
