Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,8 @@
    "outputs": [],
    "source": [
     "def favorite_destination()\n",
-    "travel_destinations[-1] # 'madagascar'"
+    "travel_destinations[-1]\n",
+    "return # 'madagascar'"
    ]
   },
   {
