Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,8 +230,7 @@
    "source": [
     "def favorite_destination()\n",
     "    travel_destinations.append('madagascar')\n",
-    "    travel_destinations[-1]\n",
-    "return # 'madagascar'"
+    "    return travel_destinations[-1]\n"
    ]
   },
   {
