--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,15 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "travel_destinations.append('madagascar')\n",
-    "print(travel_destinations)\n",
+    "print(travel_destinations)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "\n",
     "\\gh the list of `destinations` and capitalizes the first letter of each word. It should return a list of capitalized destinations."
