--- a/index.ipynb
+++ b/index.ipynb
@@ -202,15 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected character after line continuation character (<ipython-input-12-366fa2a1db65>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-366fa2a1db65>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    \\gh the list of `destinations` and capitalizes the first letter of each word. It should return a list of capitalized destinations.\u001b[0m\n\u001b[0m                                                                                                                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected character after line continuation character\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia', 'madagascar']\n"
      ]
     }
    ],
@@ -222,9 +221,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected character after line continuation character (<ipython-input-13-dc27490983fe>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-dc27490983fe>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    \\gh the list of `destinations` and capitalizes the first letter of each word. It should return a list of capitalized destinations.\u001b[0m\n\u001b[0m                                                                                                                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected character after line continuation character\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
