--- a/index.ipynb
+++ b/index.ipynb
@@ -241,22 +241,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-15-d26af631c6a0>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-16-cc97c7aec82b>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-d26af631c6a0>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def favorite_destination()\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-cc97c7aec82b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def favorite_destination()\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def favorite_destination()\n",
     "    travel_destinations.append('madagascar')\n",
-    "return travel_destinations[-1]\n"
+    "return travel_destinations[-1]\n",
+    "\n",
+    "favorite_destination()\n"
    ]
   },
   {
