Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -269,8 +269,10 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    return travel_destinations.title()\n",
-    "    pass"
+    "    capitalized_countries = []\n",
+    "    for destination in travel_destinations:\n",
+    "        capitalized_countries.append(destination.title())\n",
+    "    return capitalized_countries"
    ]
   },
   {
